fix: avoid mutating tracked dsp-core on product switch

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Build DSP WASM for web
         run: |
           node scripts/select-product.js --product showcase
-          cd packages/dsp-core
+          cd build/dsp-active
           moon build --target wasm
           mkdir -p ../ui-core/public/wasm
           cp _build/wasm/debug/build/src/src.wasm ../ui-core/public/wasm/moonvst_dsp.wasm
