--- a/package.json
+++ b/package.json
@@ -4,32 +4,32 @@
   "private": true,
   "license": "Apache-2.0",
   "scripts": {
+    "build:dsp": "cross-env MOONVST_PRODUCT=template node scripts/build-dsp-product.js",
+    "build:dsp:showcase": "cross-env MOONVST_PRODUCT=showcase node scripts/build-dsp-product.js",
+    "build:plugin": "cmake --build build --config Release",
+    "build:ui": "cd packages/ui-core && cross-env VITE_BUILD_TARGET=juce npx vite build",
+    "build:ui:showcase": "cd packages/ui-core && cross-env VITE_PRODUCT=showcase cross-env VITE_BUILD_TARGET=juce npx vite build",
+    "build:ui:web": "cd packages/ui-core && npx vite build",
+    "configure:plugin": "cmake -B build -DCMAKE_BUILD_TYPE=Release",
+    "configure:plugin:unity": "cmake -B build -DCMAKE_BUILD_TYPE=Release -DMOONVST_ENABLE_UNITY=ON",
     "dev": "cross-env MOONVST_PRODUCT=template npm-run-all --parallel dev:dsp:product dev:ui",
     "dev:dsp": "npm run dev:dsp:product",
     "dev:dsp:product": "node scripts/dev-dsp.js",
     "dev:dsp:showcase": "cross-env MOONVST_PRODUCT=showcase node scripts/dev-dsp.js",
+    "dev:showcase": "cross-env MOONVST_PRODUCT=showcase npm-run-all --parallel dev:dsp:showcase dev:ui:showcase",
     "dev:ui": "cd packages/ui-core && npx vite",
     "dev:ui:showcase": "cd packages/ui-core && cross-env VITE_PRODUCT=showcase npx vite",
-    "dev:showcase": "cross-env MOONVST_PRODUCT=showcase npm-run-all --parallel dev:dsp:showcase dev:ui:showcase",
-    "build:dsp": "cross-env MOONVST_PRODUCT=template node scripts/build-dsp-product.js",
-    "build:dsp:showcase": "cross-env MOONVST_PRODUCT=showcase node scripts/build-dsp-product.js",
-    "test:dsp": "cross-env MOONVST_PRODUCT=template node scripts/select-product.js --product template && cd packages/dsp-core && moon test",
-    "test:dsp:showcase": "cross-env MOONVST_PRODUCT=showcase node scripts/select-product.js --product showcase && cd packages/dsp-core && moon test",
-    "build:ui": "cd packages/ui-core && cross-env VITE_BUILD_TARGET=juce npx vite build",
-    "build:ui:showcase": "cd packages/ui-core && cross-env VITE_PRODUCT=showcase cross-env VITE_BUILD_TARGET=juce npx vite build",
-    "build:ui:web": "cd packages/ui-core && npx vite build",
-    "test:ui": "cd packages/ui-core && npm run test:ui",
-    "test:ui:unit": "cd packages/ui-core && npm run test:unit",
-    "test:ui:component": "cd packages/ui-core && npm run test:component",
-    "test:ui:e2e": "cd packages/ui-core && npm run test:e2e",
-    "build:plugin": "cmake --build build --config Release",
-    "configure:plugin": "cmake -B build -DCMAKE_BUILD_TYPE=Release",
-    "configure:plugin:unity": "cmake -B build -DCMAKE_BUILD_TYPE=Release -DMOONVST_ENABLE_UNITY=ON",
-    "release:vst": "npm run build:dsp && npm run build:ui && npm run build:plugin",
-    "release:vst:showcase": "npm run build:dsp:showcase && npm run build:ui:showcase && npm run build:plugin",
     "release:unity": "npm run build:dsp && npm run build:ui && npm run configure:plugin:unity && npm run build:plugin",
     "release:unity:showcase": "npm run build:dsp:showcase && npm run build:ui:showcase && npm run configure:plugin:unity && npm run build:plugin",
-    "scaffold:product": "node scripts/scaffold-product.js"
+    "release:vst": "npm run build:dsp && npm run build:ui && npm run build:plugin",
+    "release:vst:showcase": "npm run build:dsp:showcase && npm run build:ui:showcase && npm run build:plugin",
+    "scaffold:product": "node scripts/scaffold-product.js",
+    "test:dsp": "cross-env MOONVST_PRODUCT=template node scripts/select-product.js --product template && cd build/dsp-active && moon test",
+    "test:dsp:showcase": "cross-env MOONVST_PRODUCT=showcase node scripts/select-product.js --product showcase && cd build/dsp-active && moon test",
+    "test:ui": "cd packages/ui-core && npm run test:ui",
+    "test:ui:component": "cd packages/ui-core && npm run test:component",
+    "test:ui:e2e": "cd packages/ui-core && npm run test:e2e",
+    "test:ui:unit": "cd packages/ui-core && npm run test:unit"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
