--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,12 +3,34 @@ name: Build
 on:
   push:
     branches: [main]
-    tags: ['v*']
+    tags: ["v*"]
   pull_request:
 
 jobs:
+  discover-products:
+    runs-on: ubuntu-latest
+    outputs:
+      products: ${{ steps.discover.outputs.products }}
+      default_product: ${{ steps.discover.outputs.default_product }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - id: discover
+        shell: bash
+        run: |
+          products_json="$(node -e "const fs=require('fs');const dirs=fs.readdirSync('products',{withFileTypes:true}).filter((d)=>d.isDirectory()).map((d)=>d.name).sort();if(dirs.length===0){throw new Error('no products found under products/');}process.stdout.write(JSON.stringify(dirs.map((product)=>({product}))))")"
+          default_product="$(node -e "const fs=require('fs');const dirs=fs.readdirSync('products',{withFileTypes:true}).filter((d)=>d.isDirectory()).map((d)=>d.name).sort();if(dirs.includes('template')){process.stdout.write('template');}else{process.stdout.write(dirs[0]);}")"
+          echo "products=$products_json" >> "$GITHUB_OUTPUT"
+          echo "default_product=$default_product" >> "$GITHUB_OUTPUT"
+          echo "Discovered products: $products_json"
+
   build-macos:
     runs-on: macos-14
+    needs: discover-products
+    strategy:
+      fail-fast: false
+      matrix:
+        include: ${{ fromJson(needs.discover-products.outputs.products) }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -17,62 +39,34 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: "20"
 
       - name: Run macOS setup script
         run: bash scripts/setup-macos.sh
 
-      - name: Build DSP
-        run: npm run build:dsp
-
-      - name: Build UI
-        run: npm run build:ui
-
-      - name: Build DSP (showcase smoke)
-        run: npm run build:dsp:showcase
-
-      - name: Build UI (showcase smoke)
-        run: npm run build:ui:showcase
-
-      - name: Configure plugin (showcase)
-        run: cmake -B build -DCMAKE_BUILD_TYPE=Release -DMOONVST_ENABLE_UNITY=ON -DBUILD_TESTS=ON
-
-      - name: Build plugin (showcase)
-        run: npm run build:plugin
-
-      - name: Snapshot showcase plugin artifacts
+      - name: Build product assets
+        shell: bash
         run: |
-          mkdir -p ci-artifacts/showcase/plugin
-          cp -R build/plugin/MoonVST_artefacts/Release/VST3 ci-artifacts/showcase/plugin/VST3
-          cp -R build/plugin/MoonVST_artefacts/Release/Standalone ci-artifacts/showcase/plugin/Standalone
-          cp -R build/plugin/MoonVST_artefacts/Release/Unity ci-artifacts/showcase/plugin/Unity
-          if [ -d build/plugin/MoonVST_artefacts/Release/AU ]; then
-            cp -R build/plugin/MoonVST_artefacts/Release/AU ci-artifacts/showcase/plugin/AU
+          set -euo pipefail
+          product="${{ matrix.product }}"
+          if [ "$product" = "template" ]; then
+            npm run build:dsp
+            npm run build:ui
+          else
+            npm run "build:dsp:$product"
+            npm run "build:ui:$product"
           fi
 
-      - name: Restore template artifacts
-        run: npm run build:dsp && npm run build:ui
-
-      - name: Configure plugin (template)
+      - name: Configure plugin
         run: cmake -B build -DCMAKE_BUILD_TYPE=Release -DMOONVST_ENABLE_UNITY=ON -DBUILD_TESTS=ON
 
-      - name: Build plugin (template)
+      - name: Build plugin
         run: npm run build:plugin
 
-      - name: Snapshot template plugin artifacts
-        run: |
-          mkdir -p ci-artifacts/template/plugin
-          cp -R build/plugin/MoonVST_artefacts/Release/VST3 ci-artifacts/template/plugin/VST3
-          cp -R build/plugin/MoonVST_artefacts/Release/Standalone ci-artifacts/template/plugin/Standalone
-          cp -R build/plugin/MoonVST_artefacts/Release/Unity ci-artifacts/template/plugin/Unity
-          if [ -d build/plugin/MoonVST_artefacts/Release/AU ]; then
-            cp -R build/plugin/MoonVST_artefacts/Release/AU ci-artifacts/template/plugin/AU
-          fi
-
-      - name: Upload artifacts
+      - name: Upload plugin artifact
         uses: actions/upload-artifact@v4
         with:
-          name: moonvst-macos
+          name: moonvst-macos-${{ matrix.product }}
           path: |
             build/plugin/MoonVST_artefacts/Release/VST3/
             build/plugin/MoonVST_artefacts/Release/Standalone/
@@ -82,22 +76,20 @@ jobs:
       - name: Upload smoke test bundle
         uses: actions/upload-artifact@v4
         with:
-          name: moonvst-macos-tests
+          name: moonvst-macos-tests-${{ matrix.product }}
           if-no-files-found: error
           path: |
             build/tests/cpp/plugin_smoke_test
             build/tests/cpp/wasm_dsp_test
             build/tests/cpp/moonvst_dsp.aot
 
-      - name: Upload product build snapshots
-        uses: actions/upload-artifact@v4
-        with:
-          name: moonvst-macos-products
-          if-no-files-found: error
-          path: ci-artifacts/
-
   build-windows:
     runs-on: windows-latest
+    needs: discover-products
+    strategy:
+      fail-fast: false
+      matrix:
+        include: ${{ fromJson(needs.discover-products.outputs.products) }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -106,7 +98,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: "20"
 
       - name: Cache LLVM deps
         id: cache-llvm
@@ -121,53 +113,28 @@ jobs:
         shell: pwsh
         run: powershell -ExecutionPolicy Bypass -File scripts/setup-windows.ps1
 
-      - name: Build DSP
-        run: npm run build:dsp
-
-      - name: Build UI
-        run: npm run build:ui
-
-      - name: Build DSP (showcase smoke)
-        run: npm run build:dsp:showcase
-
-      - name: Build UI (showcase smoke)
-        run: npm run build:ui:showcase
-
-      - name: Configure plugin (showcase)
-        run: cmake -B build -DCMAKE_BUILD_TYPE=Release -DMOONVST_ENABLE_UNITY=ON -DBUILD_TESTS=ON
-
-      - name: Build plugin (showcase)
-        run: npm run build:plugin
-
-      - name: Snapshot showcase plugin artifacts
+      - name: Build product assets
         shell: pwsh
         run: |
-          New-Item -ItemType Directory -Force -Path "ci-artifacts/showcase/plugin" | Out-Null
-          Copy-Item "build/plugin/MoonVST_artefacts/Release/VST3" "ci-artifacts/showcase/plugin/VST3" -Recurse
-          Copy-Item "build/plugin/MoonVST_artefacts/Release/Standalone" "ci-artifacts/showcase/plugin/Standalone" -Recurse
-          Copy-Item "build/plugin/MoonVST_artefacts/Release/Unity" "ci-artifacts/showcase/plugin/Unity" -Recurse
+          $product = "${{ matrix.product }}"
+          if ($product -eq "template") {
+            npm run build:dsp
+            npm run build:ui
+          } else {
+            npm run "build:dsp:$product"
+            npm run "build:ui:$product"
+          }
 
-      - name: Restore template artifacts
-        run: npm run build:dsp && npm run build:ui
-
-      - name: Configure plugin (template)
+      - name: Configure plugin
         run: cmake -B build -DCMAKE_BUILD_TYPE=Release -DMOONVST_ENABLE_UNITY=ON -DBUILD_TESTS=ON
 
-      - name: Build plugin (template)
+      - name: Build plugin
         run: npm run build:plugin
 
-      - name: Snapshot template plugin artifacts
-        shell: pwsh
-        run: |
-          New-Item -ItemType Directory -Force -Path "ci-artifacts/template/plugin" | Out-Null
-          Copy-Item "build/plugin/MoonVST_artefacts/Release/VST3" "ci-artifacts/template/plugin/VST3" -Recurse
-          Copy-Item "build/plugin/MoonVST_artefacts/Release/Standalone" "ci-artifacts/template/plugin/Standalone" -Recurse
-          Copy-Item "build/plugin/MoonVST_artefacts/Release/Unity" "ci-artifacts/template/plugin/Unity" -Recurse
-
-      - name: Upload artifacts
+      - name: Upload plugin artifact
         uses: actions/upload-artifact@v4
         with:
-          name: moonvst-windows
+          name: moonvst-windows-${{ matrix.product }}
           path: |
             build/plugin/MoonVST_artefacts/Release/VST3/
             build/plugin/MoonVST_artefacts/Release/Standalone/
@@ -178,53 +145,37 @@ jobs:
       - name: Upload smoke test bundle
         uses: actions/upload-artifact@v4
         with:
-          name: moonvst-windows-tests
+          name: moonvst-windows-tests-${{ matrix.product }}
           if-no-files-found: error
           path: |
             build/tests/cpp/Release/plugin_smoke_test.exe
             build/tests/cpp/Release/wasm_dsp_test.exe
             build/tests/cpp/Release/moonvst_dsp.aot
 
-      - name: Upload product build snapshots
-        uses: actions/upload-artifact@v4
-        with:
-          name: moonvst-windows-products
-          if-no-files-found: error
-          path: ci-artifacts/
-
   test-artifact-macos:
     runs-on: macos-14
-    needs: build-macos
+    needs: [discover-products, build-macos]
+    strategy:
+      fail-fast: false
+      matrix:
+        include: ${{ fromJson(needs.discover-products.outputs.products) }}
     steps:
-      - name: Download plugin artifacts
+      - name: Download plugin artifact
         uses: actions/download-artifact@v4
         with:
-          name: moonvst-macos
+          name: moonvst-macos-${{ matrix.product }}
           path: package
 
       - name: Download smoke test bundle
         uses: actions/download-artifact@v4
         with:
-          name: moonvst-macos-tests
+          name: moonvst-macos-tests-${{ matrix.product }}
           path: smoke-tests
 
-      - name: Download product plugin snapshots
-        uses: actions/download-artifact@v4
-        with:
-          name: moonvst-macos-products
-          path: products
-
-      - name: Validate packaged plugin files (template)
+      - name: Validate packaged plugin files
         run: |
           test -d package/VST3/MoonVST.vst3
           test -f package/Standalone/MoonVST.app/Contents/MacOS/MoonVST
-
-      - name: Validate packaged plugin files (template + showcase snapshots)
-        run: |
-          test -d products/template/plugin/VST3/MoonVST.vst3
-          test -f products/template/plugin/Standalone/MoonVST.app/Contents/MacOS/MoonVST
-          test -d products/showcase/plugin/VST3/MoonVST.vst3
-          test -f products/showcase/plugin/Standalone/MoonVST.app/Contents/MacOS/MoonVST
 
       - name: Run smoke tests from build artifacts
         working-directory: smoke-tests
@@ -235,68 +186,56 @@ jobs:
 
   test-artifact-windows:
     runs-on: windows-latest
-    needs: build-windows
+    needs: [discover-products, build-windows]
+    strategy:
+      fail-fast: false
+      matrix:
+        include: ${{ fromJson(needs.discover-products.outputs.products) }}
     steps:
-      - name: Download plugin artifacts
+      - name: Download plugin artifact
         uses: actions/download-artifact@v4
         with:
-          name: moonvst-windows
+          name: moonvst-windows-${{ matrix.product }}
           path: package
 
       - name: Download smoke test bundle
         uses: actions/download-artifact@v4
         with:
-          name: moonvst-windows-tests
+          name: moonvst-windows-tests-${{ matrix.product }}
           path: smoke-tests
 
-      - name: Download product plugin snapshots
-        uses: actions/download-artifact@v4
-        with:
-          name: moonvst-windows-products
-          path: products
-
-      - name: Validate packaged plugin files (template)
+      - name: Validate packaged plugin files
         shell: pwsh
         run: |
-          if (-not (Test-Path "package/VST3/MoonVST.vst3")) { throw "VST3 artifact missing" }
-          if (-not (Test-Path "package/Standalone/MoonVST.exe")) { throw "Standalone artifact missing" }
-
-      - name: Validate packaged plugin files (template + showcase snapshots)
-        shell: pwsh
-        run: |
-          if (-not (Test-Path "products/template/plugin/VST3/MoonVST.vst3")) { throw "template VST3 snapshot missing" }
-          if (-not (Test-Path "products/template/plugin/Standalone/MoonVST.exe")) { throw "template Standalone snapshot missing" }
-          if (-not (Test-Path "products/showcase/plugin/VST3/MoonVST.vst3")) { throw "showcase VST3 snapshot missing" }
-          if (-not (Test-Path "products/showcase/plugin/Standalone/MoonVST.exe")) { throw "showcase Standalone snapshot missing" }
+          if (-not (Test-Path "package/VST3/MoonVST.vst3")) { throw "VST3 artifact missing for ${{ matrix.product }}" }
+          if (-not (Test-Path "package/Standalone/MoonVST.exe")) { throw "Standalone artifact missing for ${{ matrix.product }}" }
 
       - name: Run smoke tests from build artifacts
         working-directory: smoke-tests
         shell: pwsh
         run: |
           & "./wasm_dsp_test.exe"
-          if ($LASTEXITCODE -ne 0) { throw "wasm_dsp_test failed with code $LASTEXITCODE" }
+          if ($LASTEXITCODE -ne 0) { throw "wasm_dsp_test failed with code $LASTEXITCODE for ${{ matrix.product }}" }
           & "./plugin_smoke_test.exe"
-          if ($LASTEXITCODE -ne 0) { throw "plugin_smoke_test failed with code $LASTEXITCODE" }
+          if ($LASTEXITCODE -ne 0) { throw "plugin_smoke_test failed with code $LASTEXITCODE for ${{ matrix.product }}" }
 
   release:
     runs-on: ubuntu-latest
-    needs:
-      - test-artifact-macos
-      - test-artifact-windows
+    needs: [discover-products, test-artifact-macos, test-artifact-windows]
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     permissions:
       contents: write
     steps:
-      - name: Download macOS plugin artifact
+      - name: Download macOS plugin artifact (default product)
         uses: actions/download-artifact@v4
         with:
-          name: moonvst-macos
+          name: moonvst-macos-${{ needs.discover-products.outputs.default_product }}
           path: package/macos
 
-      - name: Download Windows plugin artifact
+      - name: Download Windows plugin artifact (default product)
         uses: actions/download-artifact@v4
         with:
-          name: moonvst-windows
+          name: moonvst-windows-${{ needs.discover-products.outputs.default_product }}
           path: package/windows
 
       - name: Validate release payload
@@ -309,12 +248,13 @@ jobs:
       - name: Create release archives
         run: |
           tag="${GITHUB_REF_NAME}"
-          (cd package/macos && zip -r "../../moonvst-${tag}-macos.zip" .)
-          (cd package/windows && zip -r "../../moonvst-${tag}-windows.zip" .)
+          product="${{ needs.discover-products.outputs.default_product }}"
+          (cd package/macos && zip -r "../../moonvst-${tag}-${product}-macos.zip" .)
+          (cd package/windows && zip -r "../../moonvst-${tag}-${product}-windows.zip" .)
 
       - name: Publish GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            moonvst-${{ github.ref_name }}-macos.zip
-            moonvst-${{ github.ref_name }}-windows.zip
+            moonvst-${{ github.ref_name }}-${{ needs.discover-products.outputs.default_product }}-macos.zip
+            moonvst-${{ github.ref_name }}-${{ needs.discover-products.outputs.default_product }}-windows.zip
