Make plugin artifact names product-specific

--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "build:ui": "cd packages/ui-core && cross-env VITE_BUILD_TARGET=juce npx vite build",
     "build:ui:showcase": "cd packages/ui-core && cross-env VITE_PRODUCT=showcase cross-env VITE_BUILD_TARGET=juce npx vite build",
     "build:ui:web": "cd packages/ui-core && npx vite build",
-    "configure:plugin": "cmake -B build -DCMAKE_BUILD_TYPE=Release",
-    "configure:plugin:unity": "cmake -B build -DCMAKE_BUILD_TYPE=Release -DMOONVST_ENABLE_UNITY=ON",
+    "configure:plugin": "cross-env MOONVST_PRODUCT=template node scripts/configure-plugin.js",
+    "configure:plugin:showcase": "cross-env MOONVST_PRODUCT=showcase node scripts/configure-plugin.js",
+    "configure:plugin:unity": "cross-env MOONVST_PRODUCT=template node scripts/configure-plugin.js --unity",
+    "configure:plugin:unity:showcase": "cross-env MOONVST_PRODUCT=showcase node scripts/configure-plugin.js --unity",
     "dev": "cross-env MOONVST_PRODUCT=template npm-run-all --parallel dev:dsp:product dev:ui",
     "dev:dsp": "npm run dev:dsp:product",
     "dev:dsp:product": "node scripts/dev-dsp.js",
@@ -20,9 +22,9 @@
     "dev:ui": "cd packages/ui-core && npx vite",
     "dev:ui:showcase": "cd packages/ui-core && cross-env VITE_PRODUCT=showcase npx vite",
     "release:unity": "npm run build:dsp && npm run build:ui && npm run configure:plugin:unity && npm run build:plugin",
-    "release:unity:showcase": "npm run build:dsp:showcase && npm run build:ui:showcase && npm run configure:plugin:unity && npm run build:plugin",
-    "release:vst": "npm run build:dsp && npm run build:ui && npm run build:plugin",
-    "release:vst:showcase": "npm run build:dsp:showcase && npm run build:ui:showcase && npm run build:plugin",
+    "release:unity:showcase": "npm run build:dsp:showcase && npm run build:ui:showcase && npm run configure:plugin:unity:showcase && npm run build:plugin",
+    "release:vst": "npm run build:dsp && npm run build:ui && npm run configure:plugin && npm run build:plugin",
+    "release:vst:showcase": "npm run build:dsp:showcase && npm run build:ui:showcase && npm run configure:plugin:showcase && npm run build:plugin",
     "scaffold:product": "node scripts/scaffold-product.js",
     "test:dsp": "cross-env MOONVST_PRODUCT=template node scripts/select-product.js --product template && cd build/dsp-active && moon test",
     "test:dsp:showcase": "cross-env MOONVST_PRODUCT=showcase node scripts/select-product.js --product showcase && cd build/dsp-active && moon test",
